# recommender_system

./: .gitignore  Dockerfile  Dockerfile.cli  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
cli/: model_rec_cli.py  top_n_products_cli.py  user_rec_cli.py
docs/: Readme.md  architecture.md  data_preparation.md
docs/strategies/: model_based.md  top_n_products.md  user_based.md  user_based_time_aware.md
eda/: descriptive_stats.py
src/: main.py
src/api/endpoints/: model_rec.py  top_products.py  user_rec.py
src/data/: read_and_clean_data.py
src/eda/: descriptive_stats.py
src/models/: timesvdpp.py  timesvdpp2.py  timesvdpp_model.pkl
src/recommender/model_based/: model_based_recommendations_data_preprocessing.py  model_based_recommendations_predict.py  model_based_recommendations_train.py
src/recommender/top_n_products/: top_n_products.py
src/recommender/user_based/: user_based_recommendations.py
src/utils/: distance_metrics.py  logging.py
tests/: test_read_and_clean_data.py
